# serializer version: 1
# name: test_list_for_siae_exports
  '''
  <div class="c-info mb-3 mb-md-4" id="besoin-dun-chiffre">
                              <button aria-controls="collapseBesoinChiffre" aria-expanded="false" class="c-info__summary collapsed" data-bs-target="#collapseBesoinChiffre" data-bs-toggle="collapse">
                                  <span>Besoin d'un chiffre ?</span>
                              </button>
                              
                                  <div class="c-info__detail collapse" id="collapseBesoinChiffre">
                                      Accédez aux <a href="/stats/siae/hiring" rel="noopener" target="_blank">données de recrutement de votre structure</a> (non nominatives) compilées, calculées et mises à jour quotidiennement.
                                  </div>
                              
                          </div>
  '''
# ---
# name: test_list_for_siae_exports_download
  list([
    list([
      'Civilité candidat',
      'Nom candidat',
      'Prénom candidat',
      'Email candidat',
      'Téléphone candidat',
      'Date de naissance candidat',
      'Ville candidat',
      'Département candidat',
      'Nom structure employeur',
      'Type employeur',
      'Métiers',
      'Source de la candidature',
      'Nom organisation prescripteur',
      'Nom utilisateur prescripteur',
      'Date de la candidature',
      'Statut de la candidature',
      'Dates de début d’embauche',
      'Dates de fin d’embauche',
      'Motifs de refus',
      'Éligibilité IAE validée',
      'Numéro PASS IAE',
      'Début PASS IAE',
      'Fin PASS IAE',
      'Statut PASS IAE',
    ]),
    list([
      'MME',
      'Doe',
      'Jane',
      'jane.doe@test.local',
      '0612345678',
      '01/01/1990',
      'Rennes',
      '35000',
      'Acme inc.',
      'EI',
      'Candidature spontanée',
      'Orienteur',
      '',
      'Pierre DUPONT',
      '18/08/2024',
      'Nouvelle candidature',
      '18/08/2024',
      '18/08/2026',
      '',
      'oui',
      '',
      '',
      '',
      '',
    ]),
  ])
# ---
# name: test_list_for_siae_filter_for_different_kind[geiq]
  '''
  <div aria-labelledby="offcanvasApplyFiltersLabel" class="c-offcanvas-filters offcanvas offcanvas-end" id="offcanvasApplyFilters" tabindex="-1">
          <div class="offcanvas-header">
              <h4 class="mb-0 btn-ico" id="offcanvasApplyFiltersLabel">
                  <i aria-hidden="true" class="ri-sound-module-fill font-weight-medium"></i>
                  <span>Filtrer</span>
              </h4>
              <button aria-label="Fermer" class="btn-close" data-bs-dismiss="offcanvas" type="button"></button>
          </div>
          <div class="offcanvas-body" id="offcanvasApplyFiltersContent">
      
      <fieldset>
          <legend>
              <button aria-controls="collapseStates" aria-expanded="false" class="btn btn-outline-transparent has-collapse-caret collapsed" data-bs-target="#collapseStates" data-bs-toggle="collapse" type="button">
                  Statut
              </button>
          </legend>
          <div class="my-3 collapse" id="collapseStates">
              <ul>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_0" name="states" type="checkbox" value="new"/>
                              <label class="form-check-label" for="id_states_0">Nouvelle candidature</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_1" name="states" type="checkbox" value="processing"/>
                              <label class="form-check-label" for="id_states_1">Candidature à l'étude</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_2" name="states" type="checkbox" value="postponed"/>
                              <label class="form-check-label" for="id_states_2">Candidature en attente</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_3" name="states" type="checkbox" value="prior_to_hire"/>
                              <label class="form-check-label" for="id_states_3">Action préalable à l’embauche</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_4" name="states" type="checkbox" value="accepted"/>
                              <label class="form-check-label" for="id_states_4">Candidature acceptée</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_5" name="states" type="checkbox" value="refused"/>
                              <label class="form-check-label" for="id_states_5">Candidature déclinée</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_6" name="states" type="checkbox" value="cancelled"/>
                              <label class="form-check-label" for="id_states_6">Embauche annulée</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_7" name="states" type="checkbox" value="obsolete"/>
                              <label class="form-check-label" for="id_states_7">Embauché ailleurs</label>
                          </div>
                      </li>
                  
              </ul>
          </div>
      </fieldset>
  
  
      
          
  
          
  
  
  
          
  
  
  
          
  
  
      <hr/>
      <fieldset>
          <legend>
              <button aria-controls="collapseSenders" aria-expanded="false" class="btn btn-outline-transparent has-collapse-caret collapsed" data-bs-target="#collapseSenders" data-bs-toggle="collapse" type="button">
                  Émetteur
              </button>
          </legend>
          <div class="mt-3 collapse" id="collapseSenders">
              
                  <div class="form-group"><label class="form-label" for="id_senders">Nom de la personne</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_senders" lang="fr" multiple="" name="senders">
  </select></div>
              
  
              
                  <div class="form-group"><label class="form-label" for="id_sender_prescriber_organizations">Nom de l'organisme prescripteur</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_sender_prescriber_organizations" lang="fr" multiple="" name="sender_prescriber_organizations">
  </select></div>
              
  
              
                  <div class="form-group"><label class="form-label" for="id_sender_companies">Nom de l’employeur orienteur</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_sender_companies" lang="fr" multiple="" name="sender_companies">
  </select></div>
              
          </div>
      </fieldset>
  
  
          
              <hr/>
              
  
  <fieldset>
      <legend>
          <button aria-controls="collapse-criteria" aria-expanded="false" class="btn btn-outline-transparent has-collapse-caret collapsed" data-bs-target="#collapse-criteria" data-bs-toggle="collapse" type="button">Critères administratifs déclarés</button>
      </legend>
      <div class="mt-3 collapse" id="collapse-criteria"><div class="form-group"><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_criteria" lang="fr" multiple="" name="criteria">
    <option value="1">Bénéficiaire du RSA</option>
  
    <option value="2">Allocataire ASS</option>
  
    <option value="3">Allocataire AAH</option>
  
    <option value="4">DETLD (+ 24 mois)</option>
  
    <option value="5">Niveau d'étude 3 (CAP, BEP) ou infra</option>
  
    <option value="6">Senior (+50 ans)</option>
  
    <option value="7">Jeune (-26 ans)</option>
  
    <option value="8">Sortant de l'ASE</option>
  
    <option value="9">DELD (12-24 mois)</option>
  
    <option value="10">Travailleur handicapé</option>
  
    <option value="11">Parent isolé</option>
  
    <option value="12">Personne sans hébergement ou hébergée ou ayant un parcours de rue</option>
  
    <option value="13">Réfugié statutaire, bénéficiaire d'une protection temporaire, protégé subsidiaire ou demandeur d'asile</option>
  
    <option value="14">Résident ZRR</option>
  
    <option value="15">Résident QPV</option>
  
    <option value="16">Sortant de détention ou personne placée sous main de justice</option>
  
    <option value="17">Maîtrise de la langue française</option>
  
    <option value="18">Mobilité</option>
  
  </select></div></div>
  </fieldset>
  
          
          
          
  
  
  
          
          
      
      
  
  <hr/>
  <fieldset>
      <legend>
          <button aria-controls="collapseDate" aria-expanded="false" class="btn btn-outline-transparent has-collapse-caret collapsed" data-bs-target="#collapseDate" data-bs-toggle="collapse" type="button">
              Date d'envoi de la candidature
          </button>
      </legend>
      <div class="mt-3 collapse" id="collapseDate">
          <div class="form-group"><label class="form-label" for="id_start_date">À partir du</label><duet-date-picker class="" identifier="id_start_date" name="start_date" placeholder="À partir du"></duet-date-picker></div>
          <div class="form-group"><label class="form-label" for="id_end_date">Jusqu'au</label><duet-date-picker class="" identifier="id_end_date" name="end_date" placeholder="Jusqu'au"></duet-date-picker></div>
      </div>
  </fieldset>
  
  </div>
  
          <div class="offcanvas-footer gap-3" id="offcanvasApplyFiltersButtons">
      <button class="btn btn-block btn-primary" data-bs-dismiss="offcanvas" type="button">Voir</button>
      
  
  
      
  
  
      
  
  
  </div>
  
      </div>
  '''
# ---
# name: test_list_for_siae_filter_for_different_kind[iae]
  '''
  <div aria-labelledby="offcanvasApplyFiltersLabel" class="c-offcanvas-filters offcanvas offcanvas-end" id="offcanvasApplyFilters" tabindex="-1">
          <div class="offcanvas-header">
              <h4 class="mb-0 btn-ico" id="offcanvasApplyFiltersLabel">
                  <i aria-hidden="true" class="ri-sound-module-fill font-weight-medium"></i>
                  <span>Filtrer</span>
              </h4>
              <button aria-label="Fermer" class="btn-close" data-bs-dismiss="offcanvas" type="button"></button>
          </div>
          <div class="offcanvas-body" id="offcanvasApplyFiltersContent">
      
      <fieldset>
          <legend>
              <button aria-controls="collapseStates" aria-expanded="false" class="btn btn-outline-transparent has-collapse-caret collapsed" data-bs-target="#collapseStates" data-bs-toggle="collapse" type="button">
                  Statut
              </button>
          </legend>
          <div class="my-3 collapse" id="collapseStates">
              <ul>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_0" name="states" type="checkbox" value="new"/>
                              <label class="form-check-label" for="id_states_0">Nouvelle candidature</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_1" name="states" type="checkbox" value="processing"/>
                              <label class="form-check-label" for="id_states_1">Candidature à l'étude</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_2" name="states" type="checkbox" value="postponed"/>
                              <label class="form-check-label" for="id_states_2">Candidature en attente</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_3" name="states" type="checkbox" value="accepted"/>
                              <label class="form-check-label" for="id_states_3">Candidature acceptée</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_4" name="states" type="checkbox" value="refused"/>
                              <label class="form-check-label" for="id_states_4">Candidature déclinée</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_5" name="states" type="checkbox" value="cancelled"/>
                              <label class="form-check-label" for="id_states_5">Embauche annulée</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_6" name="states" type="checkbox" value="obsolete"/>
                              <label class="form-check-label" for="id_states_6">Embauché ailleurs</label>
                          </div>
                      </li>
                  
              </ul>
          </div>
      </fieldset>
  
  
      
          
  
          
  
  
  
          
  
  
  
          
  
  
      <hr/>
      <fieldset>
          <legend>
              <button aria-controls="collapseSenders" aria-expanded="false" class="btn btn-outline-transparent has-collapse-caret collapsed" data-bs-target="#collapseSenders" data-bs-toggle="collapse" type="button">
                  Émetteur
              </button>
          </legend>
          <div class="mt-3 collapse" id="collapseSenders">
              
                  <div class="form-group"><label class="form-label" for="id_senders">Nom de la personne</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_senders" lang="fr" multiple="" name="senders">
  </select></div>
              
  
              
                  <div class="form-group"><label class="form-label" for="id_sender_prescriber_organizations">Nom de l'organisme prescripteur</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_sender_prescriber_organizations" lang="fr" multiple="" name="sender_prescriber_organizations">
  </select></div>
              
  
              
                  <div class="form-group"><label class="form-label" for="id_sender_companies">Nom de l’employeur orienteur</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_sender_companies" lang="fr" multiple="" name="sender_companies">
  </select></div>
              
          </div>
      </fieldset>
  
  
          
              <hr/>
              
  
  <fieldset>
      <legend>
          <button aria-controls="collapse-criteria" aria-expanded="false" class="btn btn-outline-transparent has-collapse-caret collapsed" data-bs-target="#collapse-criteria" data-bs-toggle="collapse" type="button">Critères administratifs déclarés</button>
      </legend>
      <div class="mt-3 collapse" id="collapse-criteria"><div class="form-group"><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_criteria" lang="fr" multiple="" name="criteria">
    <option value="1">Bénéficiaire du RSA</option>
  
    <option value="2">Allocataire ASS</option>
  
    <option value="3">Allocataire AAH</option>
  
    <option value="4">DETLD (+ 24 mois)</option>
  
    <option value="5">Niveau d'étude 3 (CAP, BEP) ou infra</option>
  
    <option value="6">Senior (+50 ans)</option>
  
    <option value="7">Jeune (-26 ans)</option>
  
    <option value="8">Sortant de l'ASE</option>
  
    <option value="9">DELD (12-24 mois)</option>
  
    <option value="10">Travailleur handicapé</option>
  
    <option value="11">Parent isolé</option>
  
    <option value="12">Personne sans hébergement ou hébergée ou ayant un parcours de rue</option>
  
    <option value="13">Réfugié statutaire, bénéficiaire d'une protection temporaire, protégé subsidiaire ou demandeur d'asile</option>
  
    <option value="14">Résident ZRR</option>
  
    <option value="15">Résident QPV</option>
  
    <option value="16">Sortant de détention ou personne placée sous main de justice</option>
  
    <option value="17">Maîtrise de la langue française</option>
  
    <option value="18">Mobilité</option>
  
  </select></div></div>
  </fieldset>
  
          
          
              <hr/>
              
  
  <fieldset>
      <legend>
          <button aria-controls="collapse-eligibility_validated" aria-expanded="false" class="btn btn-outline-transparent has-collapse-caret collapsed" data-bs-target="#collapse-eligibility_validated" data-bs-toggle="collapse" type="button">Éligibilité IAE</button>
      </legend>
      <div class="mt-3 collapse" id="collapse-eligibility_validated"><div class="form-group"><div class="form-check"><input class="form-check-input" id="id_eligibility_validated" name="eligibility_validated" type="checkbox"/><label class="form-check-label" for="id_eligibility_validated">Éligibilité validée</label></div></div></div>
  </fieldset>
  
          
          
  
  
      <hr/>
      <fieldset>
          <legend>
              <button aria-controls="collapsePassIAE" aria-expanded="false" class="btn btn-outline-transparent has-collapse-caret collapsed" data-bs-target="#collapsePassIAE" data-bs-toggle="collapse" type="button">
                  Statut du PASS IAE
              </button>
          </legend>
          <div class="my-3 collapse" id="collapsePassIAE">
              <ul>
                  <li><div class=""><div class="form-check"><input class="form-check-input" id="id_pass_iae_active" name="pass_iae_active" type="checkbox"/><label class="form-check-label" for="id_pass_iae_active">Actif</label></div></div></li>
                  <li><div class=""><div class="form-check"><input class="form-check-input" id="id_pass_iae_suspended" name="pass_iae_suspended" type="checkbox"/><label class="form-check-label" for="id_pass_iae_suspended">Suspendu</label></div></div></li>
              </ul>
          </div>
      </fieldset>
  
  
          
          
      
      
  
  <hr/>
  <fieldset>
      <legend>
          <button aria-controls="collapseDate" aria-expanded="false" class="btn btn-outline-transparent has-collapse-caret collapsed" data-bs-target="#collapseDate" data-bs-toggle="collapse" type="button">
              Date d'envoi de la candidature
          </button>
      </legend>
      <div class="mt-3 collapse" id="collapseDate">
          <div class="form-group"><label class="form-label" for="id_start_date">À partir du</label><duet-date-picker class="" identifier="id_start_date" name="start_date" placeholder="À partir du"></duet-date-picker></div>
          <div class="form-group"><label class="form-label" for="id_end_date">Jusqu'au</label><duet-date-picker class="" identifier="id_end_date" name="end_date" placeholder="Jusqu'au"></duet-date-picker></div>
      </div>
  </fieldset>
  
  </div>
  
          <div class="offcanvas-footer gap-3" id="offcanvasApplyFiltersButtons">
      <button class="btn btn-block btn-primary" data-bs-dismiss="offcanvas" type="button">Voir</button>
      
  
  
      
  
  
      
  
  
  </div>
  
      </div>
  '''
# ---
# name: test_list_for_siae_filter_for_different_kind[non_iae]
  '''
  <div aria-labelledby="offcanvasApplyFiltersLabel" class="c-offcanvas-filters offcanvas offcanvas-end" id="offcanvasApplyFilters" tabindex="-1">
          <div class="offcanvas-header">
              <h4 class="mb-0 btn-ico" id="offcanvasApplyFiltersLabel">
                  <i aria-hidden="true" class="ri-sound-module-fill font-weight-medium"></i>
                  <span>Filtrer</span>
              </h4>
              <button aria-label="Fermer" class="btn-close" data-bs-dismiss="offcanvas" type="button"></button>
          </div>
          <div class="offcanvas-body" id="offcanvasApplyFiltersContent">
      
      <fieldset>
          <legend>
              <button aria-controls="collapseStates" aria-expanded="false" class="btn btn-outline-transparent has-collapse-caret collapsed" data-bs-target="#collapseStates" data-bs-toggle="collapse" type="button">
                  Statut
              </button>
          </legend>
          <div class="my-3 collapse" id="collapseStates">
              <ul>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_0" name="states" type="checkbox" value="new"/>
                              <label class="form-check-label" for="id_states_0">Nouvelle candidature</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_1" name="states" type="checkbox" value="processing"/>
                              <label class="form-check-label" for="id_states_1">Candidature à l'étude</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_2" name="states" type="checkbox" value="postponed"/>
                              <label class="form-check-label" for="id_states_2">Candidature en attente</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_3" name="states" type="checkbox" value="accepted"/>
                              <label class="form-check-label" for="id_states_3">Candidature acceptée</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_4" name="states" type="checkbox" value="refused"/>
                              <label class="form-check-label" for="id_states_4">Candidature déclinée</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_5" name="states" type="checkbox" value="cancelled"/>
                              <label class="form-check-label" for="id_states_5">Embauche annulée</label>
                          </div>
                      </li>
                  
                      <li>
                          <div class="form-check">
                              <input class="form-check-input" id="id_states_6" name="states" type="checkbox" value="obsolete"/>
                              <label class="form-check-label" for="id_states_6">Embauché ailleurs</label>
                          </div>
                      </li>
                  
              </ul>
          </div>
      </fieldset>
  
  
      
          
  
          
  
  
  
          
  
  
  
          
  
  
      <hr/>
      <fieldset>
          <legend>
              <button aria-controls="collapseSenders" aria-expanded="false" class="btn btn-outline-transparent has-collapse-caret collapsed" data-bs-target="#collapseSenders" data-bs-toggle="collapse" type="button">
                  Émetteur
              </button>
          </legend>
          <div class="mt-3 collapse" id="collapseSenders">
              
                  <div class="form-group"><label class="form-label" for="id_senders">Nom de la personne</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_senders" lang="fr" multiple="" name="senders">
  </select></div>
              
  
              
                  <div class="form-group"><label class="form-label" for="id_sender_prescriber_organizations">Nom de l'organisme prescripteur</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_sender_prescriber_organizations" lang="fr" multiple="" name="sender_prescriber_organizations">
  </select></div>
              
  
              
                  <div class="form-group"><label class="form-label" for="id_sender_companies">Nom de l’employeur orienteur</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_sender_companies" lang="fr" multiple="" name="sender_companies">
  </select></div>
              
          </div>
      </fieldset>
  
  
          
              <hr/>
              
  
  <fieldset>
      <legend>
          <button aria-controls="collapse-criteria" aria-expanded="false" class="btn btn-outline-transparent has-collapse-caret collapsed" data-bs-target="#collapse-criteria" data-bs-toggle="collapse" type="button">Critères administratifs déclarés</button>
      </legend>
      <div class="mt-3 collapse" id="collapse-criteria"><div class="form-group"><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_criteria" lang="fr" multiple="" name="criteria">
    <option value="1">Bénéficiaire du RSA</option>
  
    <option value="2">Allocataire ASS</option>
  
    <option value="3">Allocataire AAH</option>
  
    <option value="4">DETLD (+ 24 mois)</option>
  
    <option value="5">Niveau d'étude 3 (CAP, BEP) ou infra</option>
  
    <option value="6">Senior (+50 ans)</option>
  
    <option value="7">Jeune (-26 ans)</option>
  
    <option value="8">Sortant de l'ASE</option>
  
    <option value="9">DELD (12-24 mois)</option>
  
    <option value="10">Travailleur handicapé</option>
  
    <option value="11">Parent isolé</option>
  
    <option value="12">Personne sans hébergement ou hébergée ou ayant un parcours de rue</option>
  
    <option value="13">Réfugié statutaire, bénéficiaire d'une protection temporaire, protégé subsidiaire ou demandeur d'asile</option>
  
    <option value="14">Résident ZRR</option>
  
    <option value="15">Résident QPV</option>
  
    <option value="16">Sortant de détention ou personne placée sous main de justice</option>
  
    <option value="17">Maîtrise de la langue française</option>
  
    <option value="18">Mobilité</option>
  
  </select></div></div>
  </fieldset>
  
          
          
          
  
  
  
          
          
      
      
  
  <hr/>
  <fieldset>
      <legend>
          <button aria-controls="collapseDate" aria-expanded="false" class="btn btn-outline-transparent has-collapse-caret collapsed" data-bs-target="#collapseDate" data-bs-toggle="collapse" type="button">
              Date d'envoi de la candidature
          </button>
      </legend>
      <div class="mt-3 collapse" id="collapseDate">
          <div class="form-group"><label class="form-label" for="id_start_date">À partir du</label><duet-date-picker class="" identifier="id_start_date" name="start_date" placeholder="À partir du"></duet-date-picker></div>
          <div class="form-group"><label class="form-label" for="id_end_date">Jusqu'au</label><duet-date-picker class="" identifier="id_end_date" name="end_date" placeholder="Jusqu'au"></duet-date-picker></div>
      </div>
  </fieldset>
  
  </div>
  
          <div class="offcanvas-footer gap-3" id="offcanvasApplyFiltersButtons">
      <button class="btn btn-block btn-primary" data-bs-dismiss="offcanvas" type="button">Voir</button>
      
  
  
      
  
  
      
  
  
  </div>
  
      </div>
  '''
# ---
